Some initial messing with lightweight threads